fix migration v01